--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-# Get a Postgres URL from Neon (https://neon.tech), Vercel Postgres, or any Postgres host.
-# For local SQLite development you can use: file:./dev.db with provider = "sqlite" in schema.prisma (revert that change).
+# Required for Vercel and for local dev. Get from: https://neon.tech → New project → copy connection string.
+# On Vercel: Settings → Environment Variables → add DATABASE_URL with this value.
 DATABASE_URL="postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require"
