--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db push && next build",
+    "build": "node scripts/check-db-url.js && prisma generate && prisma db push && next build",
     "start": "next start",
     "lint": "next lint",
     "deploy": "npx vercel --prod",
