--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "@vercel/blob": "^2.2.0",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.6.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@prisma/client": "^5.14.0",
-    "bcryptjs": "^2.4.3",
-    "cookie": "^0.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
