--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "start": "next start",
     "lint": "next lint",
     "deploy": "npx vercel --prod",
+    "mobile:sync": "cap sync",
+    "mobile:ios": "cap open ios",
+    "mobile:android": "cap open android",
+    "mobile:run:ios": "cap run ios",
+    "mobile:run:android": "cap run android",
     "postinstall": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
+    "@capacitor/ios": "^8.1.0",
     "@prisma/client": "^5.14.0",
     "@vercel/blob": "^2.2.0",
     "bcryptjs": "^2.4.3",
