--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --hostname 0.0.0.0",
     "build": "node scripts/check-db-url.js && prisma generate && prisma db push && next build",
     "start": "next start",
     "lint": "next lint",
