--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,21 +1,18 @@
 {
-  "cli": { "version": ">= 5.0.0" },
+  "cli": { "version": ">= 5.0.0", "appVersionSource": "remote" },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
+    "development": { "developmentClient": true, "distribution": "internal" },
     "preview": {
+      "env": { "EXPO_PUBLIC_API_URL": "https://fatlosstrack.com" },
       "distribution": "internal",
       "android": { "buildType": "apk" }
     },
     "production": {
+      "env": { "EXPO_PUBLIC_API_URL": "https://fatlosstrack.com" },
       "android": { "buildType": "app-bundle" }
     }
   },
   "submit": {
-    "production": {
-      "android": { "service": "google-play-store" }
-    }
+    "production": { "android": { "track": "production" } }
   }
 }
